Added shadow prop for messages

--- a/src/style.scss
+++ b/src/style.scss
@@ -30,6 +30,10 @@
 		left: 50%;
 		transform: translateX(-50%);
 	}
+
+	&.has-shadow .vue3-snackbar-message {
+		box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+	}
 }
 
 .vue3-snackbar-message {
