Updated deps, added 'content-width' prop and export SnackbarMessage type

--- a/src/style.postcss
+++ b/src/style.postcss
@@ -211,7 +211,7 @@
 	&-content {
 		display: flex;
 		flex-flow: column;
-		width: min(50vw, 350px);
+		width: var(--snackbar-content-width);
 	}
 
 	&-badge {
